--- a/.gitignore
+++ b/.gitignore
@@ -150,14 +150,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-test.html
-output.json
-trending.json
-topics.json
-/visits
+Scraper/test.html
+Scraper/output.json
+Scraper/trending.json
+Scraper/topics.json
+Scraper/visits
 persistence.json
 api_token.txt
-/csv
+Scraper/csv
 .vscode/settings.json
 JupyterNotebook/repositories.json
 JupyterNotebook/repositories_output.json
